@@ -232,26 +232,74 @@ node for ANY node that takes something other than a Group */
 #define NODE_NEEDS_COMPILING (node->_ichange != node->_change)
 /* end of compile simple nodes code */
 
-#define MARK_META_EVENT(type) \
-        /* we store oldmetadata as a SFTime because it =64 bits, and it will not cause problems \
-           on node garbage collection as it will not then be a duplicate SFNode pointer */ \
-        if (node->__oldmetadata != node->metadata) { \
-                MARK_EVENT((void*)node, offsetof (struct X3D_##type, metadata));  \
-                node->__oldmetadata = node->metadata; \
+
+#define MARK_SFFLOAT_INOUT_EVENT(good,save,offset) \
+        if (!APPROX(good,save)) { \
+                MARK_EVENT(X3D_NODE(node), offset);\
+                save = good; \
         }
 
+#define MARK_SFTIME_INOUT_EVENT(good,save,offset) \
+        if (!APPROX(good,save)) { \
+                MARK_EVENT(X3D_NODE(node), offset);\
+                save = good; \
+        }
 
-#define MARK_SFVEC3F_EVENT(good,save,offset) \
+#define MARK_SFINT32_INOUT_EVENT(good,save,offset) \
+        if (good!=save) { \
+                MARK_EVENT(X3D_NODE(node), offset);\
+                save = good; \
+        }
+
+#define MARK_SFBOOL_INOUT_EVENT(good,save,offset) \
+        if (good!=save) { \
+                MARK_EVENT(X3D_NODE(node), offset);\
+                save = good; \
+        }
+
+#define MARK_SFSTRING_INOUT_EVENT(good,save,offset) \
+        if (good->strptr!=save->strptr) { \
+                MARK_EVENT(X3D_NODE(node), offset);\
+                save->strptr = good->strptr; \
+        }
+
+#define MARK_MFSTRING_INOUT_EVENT(good,save,offset) \
+	/* assumes that the good pointer has been updated */ \
+	if (good.p != save.p) { \
+                MARK_EVENT(X3D_NODE(node), offset);\
+		save.n = good.n; \
+		save.p = good.p; \
+        }
+
+#define MARK_SFVEC3F_INOUT_EVENT(good,save,offset) \
         if ((!APPROX(good.c[0],save.c[0])) || (!APPROX(good.c[1],save.c[1])) || (!APPROX(good.c[2],save.c[2]))) { \
                 MARK_EVENT(X3D_NODE(node), offset);\
                 memcpy (&save.c, &good.c, sizeof (struct SFColor));\
         }
 
-#define MARK_SFVEC3D_EVENT(good,save,offset) \
+#define MARK_SFVEC3D_INOUT_EVENT(good,save,offset) \
         if ((!APPROX(good.c[0],save.c[0])) || (!APPROX(good.c[1],save.c[1])) || (!APPROX(good.c[2],save.c[2]))) { \
                 MARK_EVENT(X3D_NODE(node), offset);\
                 memcpy (&save.c, &good.c, sizeof (struct SFVec3d));\
         }
+
+
+/* make sure that the SFNODE "save" field is not deleted when scenegraph is removed (dup pointer problem) */
+#define MARK_SFNODE_INOUT_EVENT(good,save,offset) \
+        if (good != save) { \
+                MARK_EVENT(X3D_NODE(node), offset);\
+                save = good; \
+        }
+
+
+#define MARK_MFNODE_INOUT_EVENT(good,save,offset) \
+	/* assumes that the good pointer has been updated */ \
+	if (good.p != save.p) { \
+                MARK_EVENT(X3D_NODE(node), offset);\
+		save.n = good.n; \
+		save.p = good.p; \
+        }
+
 
 
 void startOfLoopNodeUpdates(void);
@@ -1244,6 +1292,15 @@ void killKeySensorNodeList(void);
 void addNodeToKeySensorList(struct X3D_Node* node);
 int KeySensorNodePresent(void);
 void sendKeyToKeySensor(const char key, int upDown);
+
+/* Programmable Shaders Component */
+void render_ComposedShader (struct X3D_ComposedShader *);
+void render_PackagedShader (struct X3D_PackagedShader *);
+void render_ProgramShader (struct X3D_ProgramShader *);
+void compile_ComposedShader (struct X3D_ComposedShader *);
+void compile_PackagedShader (struct X3D_PackagedShader *);
+void compile_ProgramShader (struct X3D_ProgramShader *);
+#define TURN_APPEARANCE_SHADER_OFF {extern GLuint globalCurrentShader; if (globalCurrentShader!=0) { globalCurrentShader = 0; glUseProgram(0);}}
 
 void prep_MidiControl (struct X3D_MidiControl *node);
 void do_MidiControl (void *node);
