@@ -1,4 +1,6 @@
 For 1.20.8
+	- start of ComposedShader and ShaderPart support.
+
 	- Background - textures now working again, problem related to new scenegraph
 	  structure resolved.
 
